Adding vague mention of code style
(bzr r1191)

--- a/HACKING
+++ b/HACKING
@@ -38,3 +38,9 @@ folks to try out, poke and prod, and tinker with.  We figure, the best
 way to see if an idea fits is to try it on for size.
 
 
+Coding Style
+============
+Please refer to the Coding Style Guidelines if you have specific
+questions on the style to use for code.  If reading style guidelines
+doesn't interest you, just follow the general style of the surrounding
+code, so that it is at least consistent.
