I updated the files at our CVS root level to conform. I did however leave Makefile.am and configure.in alone because I converted to spaces and it started to give me errors. Thus, I decided since I'm making so many changes that it would be better to commit these files first, and work these out second.
(bzr r1291)

--- a/README
+++ b/README
@@ -52,6 +52,12 @@ Open can handle only svg graphics
 It does not yet handle following svg shapes:
 - circle
 
+
+
+OLD
+===
+
+
 When importing svg generated with ill2svg, all paths are usually grouped.
 Ungroup these manually.
 
