--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
        src/dialogs/text-edit.cpp, src/dialogs/text-edit.h, 
        src/dialogs/tool-options.cpp, src/dialogs/tool-options.h,
        src/dialogs/transformation.cpp, src/dialogs/transformation.h,
+       src/dialogs/xml-tree.cpp, src/dialogs/xml-tree.h,
        src/dialogs/xml-tree.cpp, src/dialogs/xml-tree.h: Converted 
        the aforementioned to coding style.
 
