--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-07 Johan Ceuppens <jceuppen@easynet.be> 
+    * src/libnrtype/nr-type-gnome.cpp src/libnrtype/nr-type-directory
+      src/libnrtype/nr-type-xft.cpp src/widgets/font-selector.cpp 
+      src/print.cpp src/module.h src/module.cpp
+      modules/gnome.cpp: activated --with-gnome-print
+      libnrtype/nr-type-primitives.h: removed possible gchar signedness
+      bug.
+
 2004-02-07  Nathan Hurst <njh@mail.csse.monash.edu.au>
 
     * src/widgets/gradient-position.*: modified the gradient knot
