--- a/ChangeLog
+++ b/ChangeLog
@@ -10,7 +10,7 @@
 	* src/desktop.h (SP_DESKTOP_ZOOM): Define in terms of expansion()
 	function instead of implicit casting.
 
-	* src/arc-context.cpp, src/selection.cpp:
+	* src/arc-context.cpp, src/selection.cpp, src/selection.h:
 	Cleanups: greater conformance to Coding_Style, combine declaration
 	and first assignment of some vars.
 
