--- a/ChangeLog
+++ b/ChangeLog
@@ -15,7 +15,7 @@
 
 	* src/arc-context.cpp, src/selection.cpp, src/selection.h,
 	src/sp-ellipse.cpp, src/sp-image.cpp, src/sp-offset.cpp,
-	src/sp-rect.cpp:
+	src/sp-rect.cpp, src/sp-spiral.cpp, src/sp-star.cpp:
 	Cleanups: greater conformance to Coding_Style, combine declaration
 	and first assignment of some vars.
 
